fix scrollbar

--- a/css/base/global.css
+++ b/css/base/global.css
@@ -13,25 +13,6 @@ body {
   letter-spacing: 0.2px;
 }
 
-html {
-  scrollbar-color: var(--contrastLighter);
-  scrollbar-width: thin;
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--neutral);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--contrastLighter);
-  border-radius: 0px !important;
-  border: 3px solid;
-}
-
 ::selection {
   background-color: var(--contrast);
   color: var(--neutral);
